--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
 name = "minecraft_struct_building"
-version = "0.1.1"
+version = "0.1.2"
 description = ""
-authors = ["Your Name <you@example.com>"]
+authors = ["konishi0125"]
 
 [tool.poetry.dependencies]
 python = "^3.9"
@@ -17,4 +17,4 @@ requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
-minecraft_get_building = "minecraft_get_building.minecraft_get_building:main"
+minecraft_struct_building = "minecraft_struct_building.minecraft_struct_building:main"
